tests/snapshots/closure_conv__mc4_lifted_functions.snap
---
source: tests/closure_conv.rs
expression: lifted
---
[
    IrFunction {
        name: "__closure0",
        generic_params: [],
        params: [
            IrFunctionParam {
                binding_id: BindingId(
                    0,
                ),
                name: "__env",
                external_label: None,
                ty: Some(
                    Struct(
                        StructId(
                            0,
                        ),
                    ),
                ),
                default: None,
                convention: Let,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 123,
                            line: 6,
                            column: 40,
                        },
                        end: Location {
                            offset: 136,
                            line: 6,
                            column: 53,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            IrFunctionParam {
                binding_id: BindingId(
                    1,
                ),
                name: "t",
                external_label: None,
                ty: Some(
                    Primitive(
                        String,
                    ),
                ),
                default: None,
                convention: Let,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 123,
                            line: 6,
                            column: 40,
                        },
                        end: Location {
                            offset: 136,
                            line: 6,
                            column: 53,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
        return_type: Some(
            Primitive(
                String,
            ),
        ),
        body: Some(
            Reference {
                path: [
                    "t",
                ],
                target: Param(
                    BindingId(
                        1,
                    ),
                ),
                ty: Primitive(
                    String,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ),
        extern_abi: None,
        attributes: [],
        doc: Some(
            "Auto-generated lifted closure body. Produced by `ClosureConversionPass`. The first parameter `__env` carries the closure's captures.",
        ),
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 123,
                    line: 6,
                    column: 40,
                },
                end: Location {
                    offset: 136,
                    line: 6,
                    column: 53,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
    IrFunction {
        name: "__closure1",
        generic_params: [],
        params: [
            IrFunctionParam {
                binding_id: BindingId(
                    0,
                ),
                name: "__env",
                external_label: None,
                ty: Some(
                    Struct(
                        StructId(
                            1,
                        ),
                    ),
                ),
                default: None,
                convention: Let,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 62,
                            line: 3,
                            column: 9,
                        },
                        end: Location {
                            offset: 76,
                            line: 3,
                            column: 23,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            IrFunctionParam {
                binding_id: BindingId(
                    1,
                ),
                name: "x",
                external_label: None,
                ty: Some(
                    Primitive(
                        I32,
                    ),
                ),
                default: None,
                convention: Let,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 62,
                            line: 3,
                            column: 9,
                        },
                        end: Location {
                            offset: 76,
                            line: 3,
                            column: 23,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
        return_type: Some(
            Primitive(
                I32,
            ),
        ),
        body: Some(
            BinaryOp {
                left: Reference {
                    path: [
                        "x",
                    ],
                    target: Param(
                        BindingId(
                            1,
                        ),
                    ),
                    ty: Primitive(
                        I32,
                    ),
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                op: Add,
                right: FieldAccess {
                    object: Reference {
                        path: [
                            "__env",
                        ],
                        target: Param(
                            BindingId(
                                0,
                            ),
                        ),
                        ty: Struct(
                            StructId(
                                1,
                            ),
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 0,
                                    line: 1,
                                    column: 1,
                                },
                                end: Location {
                                    offset: 0,
                                    line: 1,
                                    column: 1,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                    field: "n",
                    field_idx: FieldIdx(
                        0,
                    ),
                    ty: Primitive(
                        I32,
                    ),
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ),
        extern_abi: None,
        attributes: [],
        doc: Some(
            "Auto-generated lifted closure body. Produced by `ClosureConversionPass`. The first parameter `__env` carries the closure's captures.",
        ),
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 62,
                    line: 3,
                    column: 9,
                },
                end: Location {
                    offset: 76,
                    line: 3,
                    column: 23,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
]
