tests/snapshots/closure_conv__mc5_let_shadowing.snap
---
source: tests/closure_conv.rs
expression: lifted_body
---
Block {
    statements: [
        Let {
            binding_id: BindingId(
                2,
            ),
            name: "n",
            mutable: false,
            ty: Some(
                Primitive(
                    I32,
                ),
            ),
            value: Literal {
                value: Number(
                    NumberLiteral {
                        value: Integer(
                            100,
                        ),
                        suffix: None,
                        kind: Integer,
                    },
                ),
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 107,
                            line: 4,
                            column: 30,
                        },
                        end: Location {
                            offset: 110,
                            line: 4,
                            column: 33,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    result: BinaryOp {
        left: Reference {
            path: [
                "x",
            ],
            target: Param(
                BindingId(
                    1,
                ),
            ),
            ty: Primitive(
                I32,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 130,
                        line: 5,
                        column: 20,
                    },
                    end: Location {
                        offset: 131,
                        line: 5,
                        column: 21,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        op: Add,
        right: Reference {
            path: [
                "n",
            ],
            target: Local(
                BindingId(
                    2,
                ),
            ),
            ty: Primitive(
                I32,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 134,
                        line: 5,
                        column: 24,
                    },
                    end: Location {
                        offset: 135,
                        line: 5,
                        column: 25,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        ty: Primitive(
            I32,
        ),
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 130,
                    line: 5,
                    column: 20,
                },
                end: Location {
                    offset: 135,
                    line: 5,
                    column: 25,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
    ty: Primitive(
        I32,
    ),
    span: IrSpan {
        span: Span {
            start: Location {
                offset: 94,
                line: 4,
                column: 17,
            },
            end: Location {
                offset: 135,
                line: 5,
                column: 25,
            },
        },
        file: FileId(
            0,
        ),
    },
}
