tests/snapshots/closure_conv__mc5_lifted_bodies.snap
---
source: tests/closure_conv.rs
expression: lifted_bodies
---
[
    Some(
        Reference {
            path: [
                "t",
            ],
            target: Param(
                BindingId(
                    1,
                ),
            ),
            ty: Primitive(
                String,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ),
    Some(
        BinaryOp {
            left: Reference {
                path: [
                    "x",
                ],
                target: Param(
                    BindingId(
                        1,
                    ),
                ),
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            op: Add,
            right: FieldAccess {
                object: Reference {
                    path: [
                        "__env",
                    ],
                    target: Param(
                        BindingId(
                            0,
                        ),
                    ),
                    ty: Struct(
                        StructId(
                            5,
                        ),
                    ),
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                field: "n",
                field_idx: FieldIdx(
                    0,
                ),
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            ty: Primitive(
                I32,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ),
]
