tests/snapshots/closure_conv__mc6_site_rewrites.snap
---
source: tests/closure_conv.rs
expression: "(make_adder_body, format_tag_value)"
---
(
    ClosureRef {
        funcref: [
            "__closure1",
        ],
        env_struct: StructInst {
            struct_id: Some(
                StructId(
                    5,
                ),
            ),
            type_args: [],
            fields: [
                (
                    "n",
                    FieldIdx(
                        0,
                    ),
                    Reference {
                        path: [
                            "n",
                        ],
                        target: Param(
                            BindingId(
                                0,
                            ),
                        ),
                        ty: Primitive(
                            I32,
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 0,
                                    line: 1,
                                    column: 1,
                                },
                                end: Location {
                                    offset: 0,
                                    line: 1,
                                    column: 1,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            ty: Struct(
                StructId(
                    5,
                ),
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 62,
                        line: 3,
                        column: 9,
                    },
                    end: Location {
                        offset: 79,
                        line: 3,
                        column: 26,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        ty: Closure {
            param_tys: [
                (
                    Let,
                    Primitive(
                        I32,
                    ),
                ),
            ],
            return_ty: Primitive(
                I32,
            ),
        },
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 62,
                    line: 3,
                    column: 9,
                },
                end: Location {
                    offset: 79,
                    line: 3,
                    column: 26,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
    ClosureRef {
        funcref: [
            "__closure0",
        ],
        env_struct: StructInst {
            struct_id: Some(
                StructId(
                    4,
                ),
            ),
            type_args: [],
            fields: [],
            ty: Struct(
                StructId(
                    4,
                ),
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 128,
                        line: 6,
                        column: 42,
                    },
                    end: Location {
                        offset: 144,
                        line: 6,
                        column: 58,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        ty: Closure {
            param_tys: [
                (
                    Let,
                    Primitive(
                        String,
                    ),
                ),
            ],
            return_ty: Primitive(
                String,
            ),
        },
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 128,
                    line: 6,
                    column: 42,
                },
                end: Location {
                    offset: 144,
                    line: 6,
                    column: 58,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
)
