tests/snapshots/closure_conv__mc9_env_field_conventions.snap
---
source: tests/closure_conv.rs
expression: env_structs
---
[
    IrStruct {
        name: "__ClosureEnv0",
        visibility: Private,
        traits: [],
        fields: [
            IrField {
                name: "counter",
                ty: Primitive(
                    I32,
                ),
                mutable: true,
                optional: false,
                default: None,
                doc: None,
                convention: Mut,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
        generic_params: [],
        doc: Some(
            "Auto-generated capture environment for a lifted closure. Produced by `ClosureConversionPass`.",
        ),
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
                end: Location {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
    IrStruct {
        name: "__ClosureEnv1",
        visibility: Private,
        traits: [],
        fields: [
            IrField {
                name: "n",
                ty: Primitive(
                    I32,
                ),
                mutable: false,
                optional: false,
                default: None,
                doc: None,
                convention: Sink,
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                        end: Location {
                            offset: 0,
                            line: 1,
                            column: 1,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
        generic_params: [],
        doc: Some(
            "Auto-generated capture environment for a lifted closure. Produced by `ClosureConversionPass`.",
        ),
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
                end: Location {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
]
